scripts/tests/fixtures/should-pass/SingleMonoBehaviour.cs
using UnityEngine;

// This file should PASS: single MonoBehaviour with matching filename
public class SingleMonoBehaviour : MonoBehaviour
{
    public int health;
    public float speed;

    private void Start() { }

    private void Update() { }
}
