scripts/tests/fixtures/should-fail/TwoMonoBehaviours.cs
using UnityEngine;

// This file should FAIL: contains two MonoBehaviour classes
public class TwoMonoBehavioursA : MonoBehaviour
{
    public int value;
}

public class TwoMonoBehavioursB : MonoBehaviour
{
    public string name;
}
